Finished bonus assignments

--- a/src/components/navigation/Navigation.css
+++ b/src/components/navigation/Navigation.css
@@ -2,13 +2,17 @@
     display: flex;
     justify-content: flex-end;
     list-style: none;
-    color: #FDF4F2;
-    font-weight: bold;
-    font-size: 12px;
     padding-top: 20px;
     margin-right: 100px;
 }
 
-.navigation > li {
+.navigation__navlink {
+    color: #FDF4F2;
+    font-weight: bold;
+    font-size: 12px;
+    text-decoration: none;
+}
+
+li {
     margin-right: 30px;
 }
