--- a/src/components/posts/Post.css
+++ b/src/components/posts/Post.css
@@ -4,13 +4,14 @@
     justify-content: space-between;
     padding: 15px;
     width: 350px;
-    height: 200px;
+    min-height: 150px;
     margin: 10px;
     background-color: #FFFFFF;
     box-shadow: 5px 5px 5px #EBE3E1;
 }
 .link {
     text-decoration: none;
+    margin-bottom: 15px;
 }
 
 .bottom-wrapper {
