--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,10 +1,10 @@
 .footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 100%;
     background-color: #292929;
     color: #FDF4F2;
     height: 50px;
     font-size: 12px;
     margin-top: 100px;
+    text-align: center;
+    padding-top: 20px;
 }
