--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -20,3 +20,12 @@
     font-weight: bold;
     color: #292929;
 }
+
+.header-container h1 {
+    font-size: 50px;
+    padding-top: 35px;
+}
+
+.header-container h4 {
+    font-size: 14px;
+}
